added animation to the education page

--- a/DeMarksWebsite/src/app/education/education.component.html
+++ b/DeMarksWebsite/src/app/education/education.component.html
@@ -1,78 +1,80 @@
-<h1 class="education-container main-headings">
-    University Education
-</h1>
-<div class="education-container">
-    <div class="card" style="width: 50%; border: none;">
-        <div class="row">
-          <div class="col">
-            <img src="../assets/images/unhlogo.png" style="display: block; margin: auto;" class="img-fluid center-block">
-          </div>
-          <div class="col">
-            <div class="card-body">
-                <h1 class="card-title">Bachelor of Science in <br>Computer Science</h1>
-                <h3 class="education-sub-title">University of New Haven 2021</h3>
-                <p class="card-text">
-                    • Data Structures and Algorithms<br>
-                    • Discrete Mathematics for Computing<br>
-                    • Algorithm Design and Analysis<br>
-                    • Artificial Intelligence<br>
-                    • Cryptography & Data Security<br>
-                    • Calculus I, Calculus II, Linear Algebra<br>
-                </p>
-            </div>
-          </div>
-        </div>
-      </div>
-</div>
-<hr class="hr-breaker">
-<h1 class="education-container main-headings">
-    Software Development Training
-</h1>
-<div class="education-container">
-    <div class="card" style="width: 50%; border: none;">
-        <div class="row">
-            <div class="col">
-                <img src="../assets/images/revaturelogo.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
-            </div>
-            <div class="col">
+<div [@fadeInState]="transition">
+    <h1 class="education-container main-headings">
+        University Education
+    </h1>
+    <div class="education-container">
+        <div class="card" style="width: 50%; border: none;">
+            <div class="row">
+              <div class="col">
+                <img src="../assets/images/unhlogo.png" style="display: block; margin: auto;" class="img-fluid center-block">
+              </div>
+              <div class="col">
                 <div class="card-body">
-                    <h1 class="card-title">.NET Full-Stack<br>Training</h1>
-                    <h3 class="education-sub-title">Revature 2022</h3>
+                    <h1 class="card-title">Bachelor of Science in <br>Computer Science</h1>
+                    <h3 class="education-sub-title">University of New Haven 2021</h3>
                     <p class="card-text">
-                        • ADO.NET<br>
-                        • ASP.NET Web API<br>
-                        • C# & Angular (HTML, CSS, TS)<br>
-                        • T-SQL<br>
-                        • Microsoft Azure<br>
-                        • Github, DBeaver, Bootstrap, SonarCloud<br>
+                        • Data Structures and Algorithms<br>
+                        • Discrete Mathematics for Computing<br>
+                        • Algorithm Design and Analysis<br>
+                        • Artificial Intelligence<br>
+                        • Cryptography & Data Security<br>
+                        • Calculus I, Calculus II, Linear Algebra<br>
                     </p>
                 </div>
+              </div>
             </div>
-        </div>
-      </div>
-</div>
-<hr class="hr-breaker">
-<h1 class="education-container main-headings">
-    Other Education/Training
-</h1>
-<div class="education-container">
-    <div class="card" style="width: 50%; border: none;">
-        <div class="row">
-            <div class="col">
-                <img src="../assets/images/nedive.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
-            </div>
-            <div class="col">
-                <div class="card-body">
-                    <h1 class="card-title">SDI Open Water<br>Scuba Certification</h1>
-                    <h3 class="education-sub-title">New England Dive 2022</h3>
-                    <p class="card-text">
-                        • SDI Online Academic Course<br>
-                        • Confined Water Training<br>
-                        • Open Water Training<br>
-                    </p>
+          </div>
+    </div>
+    <hr class="hr-breaker">
+    <h1 class="education-container main-headings">
+        Software Development Training
+    </h1>
+    <div class="education-container">
+        <div class="card" style="width: 50%; border: none;">
+            <div class="row">
+                <div class="col">
+                    <img src="../assets/images/revaturelogo.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
+                </div>
+                <div class="col">
+                    <div class="card-body">
+                        <h1 class="card-title">.NET Full-Stack<br>Training</h1>
+                        <h3 class="education-sub-title">Revature 2022</h3>
+                        <p class="card-text">
+                            • ADO.NET<br>
+                            • ASP.NET Web API<br>
+                            • C# & Angular (HTML, CSS, TS)<br>
+                            • T-SQL<br>
+                            • Microsoft Azure<br>
+                            • Github, DBeaver, Bootstrap, SonarCloud<br>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-      </div>
+          </div>
+    </div>
+    <hr class="hr-breaker">
+    <h1 class="education-container main-headings">
+        Other Education/Training
+    </h1>
+    <div class="education-container">
+        <div class="card" style="width: 50%; border: none;">
+            <div class="row">
+                <div class="col">
+                    <img src="../assets/images/nedive.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
+                </div>
+                <div class="col">
+                    <div class="card-body">
+                        <h1 class="card-title">SDI Open Water<br>Scuba Certification</h1>
+                        <h3 class="education-sub-title">New England Dive 2022</h3>
+                        <p class="card-text">
+                            • SDI Online Academic Course<br>
+                            • Confined Water Training<br>
+                            • Open Water Training<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+          </div>
+    </div>
+    <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
