updated folders for images and added portfolio content

--- a/DeMarksWebsite/src/app/education/education.component.html
+++ b/DeMarksWebsite/src/app/education/education.component.html
@@ -6,7 +6,7 @@
         <div class="card" style="width: 50%; border: none;">
             <div class="row">
               <div class="col">
-                <img src="../assets/images/unhlogo.png" style="display: block; margin: auto;" class="img-fluid center-block">
+                <img src="../assets/images/educationimages/unhlogo.png" style="display: block; margin: auto;" class="img-fluid center-block">
               </div>
               <div class="col">
                 <div class="card-body">
@@ -33,7 +33,7 @@
         <div class="card" style="width: 50%; border: none;">
             <div class="row">
                 <div class="col">
-                    <img src="../assets/images/revaturelogo.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
+                    <img src="../assets/images/educationimages/revaturelogo.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
                 </div>
                 <div class="col">
                     <div class="card-body">
@@ -60,7 +60,7 @@
         <div class="card" style="width: 50%; border: none;">
             <div class="row">
                 <div class="col">
-                    <img src="../assets/images/nedive.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
+                    <img src="../assets/images/educationimages/nedive.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
                 </div>
                 <div class="col">
                     <div class="card-body">
