--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 
 <div [@navBarTrigger]="state" class="flex-container">
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link demarks-logo" routerLink="/" (click)="toggle()"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
+        <a class="demarks-nav-bar-link demarks-logo" routerLink="/" (click)="toggle()"><img src="../assets/images/navbar/andydemarks.jpg" alt="andydemarks"></a>        
     </div>
     <div class="flexbox-item">
         <a class="demarks-nav-bar-link" routerLink="/about" (click)="toggle()">about</a>
@@ -14,15 +14,15 @@
         <a class="demarks-nav-bar-link" routerLink="/portfolio" (click)="toggle()">portfolio</a>        
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/githublogo.png" alt="GitHub"></a>
+        <a class="demarks-nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/navbar/githublogo.png" alt="GitHub"></a>
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" href="https://www.instagram.com/andrewd1137/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/instalogo.png" alt="Instagram"></a>
+        <a class="demarks-nav-bar-link" href="https://www.instagram.com/andrewd1137/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/navbar/instalogo.png" alt="Instagram"></a>
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" href="https://www.linkedin.com/in/andydemarks/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/lilogo.png" alt="Instagram"></a>        
+        <a class="demarks-nav-bar-link" href="https://www.linkedin.com/in/andydemarks/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/navbar/lilogo.png" alt="Instagram"></a>        
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" href="https://www.youtube.com/channel/UCzEB3VjW96lx4koxaSQ16mQ" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/ytlogo.png" alt="Youtube"></a>          
+        <a class="demarks-nav-bar-link" href="https://www.youtube.com/channel/UCzEB3VjW96lx4koxaSQ16mQ" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/navbar/ytlogo.png" alt="Youtube"></a>          
     </div>
 </div>
