--- a/DeMarksWebsite/src/app/about/about.component.css
+++ b/DeMarksWebsite/src/app/about/about.component.css
@@ -13,6 +13,7 @@
 
 .about-me-box
 {
+    margin: auto;
     display:flex;
     align-items:center;
     justify-content:center;
@@ -89,7 +90,7 @@
     margin-bottom: 2rem;
     background-color:#fff;
     display:grid;
-    grid-template-columns: 20% 45%;
+    grid-template-columns: 40% 40%;
     overflow-x: hidden;
 }
 
