--- a/DeMarksWebsite/src/app/about/about.component.html
+++ b/DeMarksWebsite/src/app/about/about.component.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="about-me-box">
-      <img src="../assets/images/freefall.png" class="img-thumbnail about-img-heading">
+      <img src="../assets/images/homeandabout/freefall.png" class="img-thumbnail about-img-heading">
     </div>
   </div>
   <app-footer></app-footer>
