--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -66,8 +66,8 @@
             (mouseover)="changeDeveloperTextR=true" (mouseout)="changeDeveloperTextR=false">r
         </span>
     </div>
-    <div [@transitionLeftState]="transition" class="home-box"><img class="home-img" src="../assets/images/freefall.png"></div>
-    <div [@transitionRightState]="transition" class="home-box"><img class="home-img" src="../assets/images/setup.png"></div>
+    <div [@transitionLeftState]="transition" class="home-box"><img class="home-img" src="../assets/images/homeandabout/freefall.png"></div>
+    <div [@transitionRightState]="transition" class="home-box"><img class="home-img" src="../assets/images/homeandabout/setup.png"></div>
 </div>
     
 <div [@fadeInState]="fadeIn">
@@ -75,7 +75,7 @@
     <div class="card-group projects-container">
         <div class="card projects-margin">
             <a class="projects-link" href="https://github.com/andrewd1137/WebCalculatorApp" target="_blank" rel="noopener noreferrer">
-                <img src="../assets/images/calcProject.png" width="100%" class="projects-img-border">
+                <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
             </a>
             <div class="card-body">
             <h5 class="card-title title-center">Simple Caculator</h5>
@@ -85,7 +85,7 @@
         </div>
         <div class="card projects-margin">
             <a class="projects-link" href="https://github.com/andrewd1137/My-2-Cents-UI" target="_blank" rel="noopener noreferrer">
-                <img src="../assets/images/my2cents.png" width="100%" class="projects-img-border">
+                <img src="../assets/images/projects/my2centsproj/my2cents.png" width="100%" class="projects-img-border">
             </a>
           <div class="card-body">
             <h5 class="card-title">My 2 Cents Banking/Investing</h5>
@@ -97,7 +97,7 @@
         </div>
         <div class="card projects-margin">
             <a class="projects-link" href="https://github.com/andrewd1137/MarsRoverPhotos" target="_blank" rel="noopener noreferrer">
-                <img src="../assets/images/marsroverimg.png" class="card-img-top projects-img-border">
+                <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
           <div class="card-body">
             <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
