--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,26 @@
-<p>portfolio works!</p>
+<div class="card-group projects-container">
+    <div class="card">
+        <div class="card-body projects-heading">
+            <h5 class="card-title">Simple Caculator</h5>
+        </div>
+        <a class="projects-link" routerLink="/">
+            <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
+        </a>
+    </div>
+    <div class="card">
+        <div class="card-body projects-heading">
+            <h5 class="card-title">My 2 Cents Banking/Investing</h5>
+        </div>
+        <a class="projects-link" routerLink="/my2cents">
+            <img src="../assets/images/projects/my2centsproj/my2centssmall.png" width="100%" class="projects-img-border">
+        </a>
+    </div>
+    <div class="card">
+        <div class="card-body projects-heading">
+            <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
+        </div>
+        <a class="projects-link" routerLink="/">
+            <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
+        </a>
+    </div>
+  </div>
