finished the my2cents component
added rest of content/updated animations to both portfolio and my 2 cents components.

--- a/DeMarksWebsite/src/app/my2cents/my2cents.component.css
+++ b/DeMarksWebsite/src/app/my2cents/my2cents.component.css
@@ -9,13 +9,38 @@
 {
     text-align: center;
     text-decoration: none;
-    background-color: black;
+    background-color: gray;
     color: white;
     width: 50%;
     font-size: 2rem;
     display: block;
     margin: auto;
     border-radius: 1rem;
+}
+
+.github-button
+{
+    margin-top: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.button-text
+{
+    margin: 1rem;
+    padding: 0.5rem;
+    text-align: center;
+    text-decoration: none;
+    background-color: gray;
+    color: white;
+    font-size: 2rem;
+    border-radius: 1rem;
+}
+
+.button-text:hover
+{
+    opacity: 50%;
 }
 
 .back-button:hover
