--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -1,9 +1,10 @@
-<div class="card-group projects-container">
+<!-- TODO: finish adding projects to this page and make the components for the calculator and mars rover photos -->
+<div [@fadeInState]="transition" class="card-group projects-container">
     <div class="card">
         <div class="card-body projects-heading">
             <h5 class="card-title">Simple Caculator</h5>
         </div>
-        <a class="projects-link" routerLink="/">
+        <a class="projects-link" routerLink="/portfolio">
             <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
         </a>
     </div>
@@ -19,7 +20,7 @@
         <div class="card-body projects-heading">
             <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
         </div>
-        <a class="projects-link" routerLink="/">
+        <a class="projects-link" routerLink="/portfolio">
             <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
         </a>
     </div>
