added simple calculator to the portfolio
you can now test the calculator and use it. added some other changes

--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -74,7 +74,7 @@
     <h3 class="projects-heading">Personal Favorite Projects</h3>
     <div class="card-group projects-container">
         <div class="card projects-margin">
-            <a class="projects-link" href="https://github.com/andrewd1137/WebCalculatorApp" target="_blank" rel="noopener noreferrer">
+            <a class="projects-link" routerLink="/calculator">
                 <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
             </a>
             <div class="card-body">
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="card projects-margin">
-            <a class="projects-link" href="https://github.com/andrewd1137/My-2-Cents-UI" target="_blank" rel="noopener noreferrer">
+            <a class="projects-link" routerLink="/my2cents">
                 <img src="../assets/images/projects/my2centsproj/my2cents.png" width="100%" class="projects-img-border">
             </a>
           <div class="card-body">
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="card projects-margin">
-            <a class="projects-link" href="https://github.com/andrewd1137/MarsRoverPhotos" target="_blank" rel="noopener noreferrer">
+            <a class="projects-link" routerLink="/">
                 <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
           <div class="card-body">
