--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -4,7 +4,7 @@
         <div class="card-body projects-heading">
             <h5 class="card-title">Simple Caculator</h5>
         </div>
-        <a class="projects-link" routerLink="/portfolio">
+        <a class="projects-link" routerLink="/calculator">
             <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
         </a>
     </div>
