added more to the portfolio page and finished the mars rover project component

--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -21,7 +21,7 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
             </div>
-            <a class="projects-link" routerLink="/portfolio">
+            <a class="projects-link" routerLink="/marsproj">
                 <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
         </div>
@@ -29,7 +29,7 @@
       <div class="card-group projects-container">
         <div class="card project-border">
             <div class="card-body projects-heading">
-                <h5 class="card-title">Simple Caculator</h5>
+                <h5 class="card-title">Paintball Store Web API</h5>
             </div>
             <a class="projects-link" routerLink="/calculator">
                 <img src="../assets/images/projects" width="100%" class="projects-img-border">
@@ -37,7 +37,7 @@
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
-                <h5 class="card-title">My 2 Cents Banking/Investing</h5>
+                <h5 class="card-title">Tic Tac Toe AI Tournament</h5>
             </div>
             <a class="projects-link" routerLink="/my2cents">
                 <img src="../assets/images/projects/" width="100%" class="projects-img-border">
@@ -45,11 +45,36 @@
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
-                <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
+                <h5 class="card-title">Linked List Queue</h5>
             </div>
             <a class="projects-link" routerLink="/portfolio">
                 <img src="../assets/images/projects" class="card-img-top projects-img-border">
             </a>
         </div>
     </div>
+    <div class="card-group projects-container">
+        <div class="card project-border">
+            <div class="card-body projects-heading">
+                <h5 class="card-title">Recursive GCD Calculator</h5>
+            </div>
+            <a class="projects-link" routerLink="/calculator">
+                <img src="../assets/images/projects" width="100%" class="projects-img-border">
+            </a>
+        </div>
+        <div class="card project-border">
+            <div class="card-body projects-heading">
+                <h5 class="card-title">Mini Web Pack</h5>
+            </div>
+            <a class="projects-link" routerLink="/my2cents">
+                <img src="../assets/images/projects/" width="100%" class="projects-img-border">
+            </a>
+        </div>
+        <div class="card project-border">
+            <div class="card-body projects-heading">
+                <h5 class="card-title">Arduino Light Switch</h5>
+            </div>
+            <a class="projects-link" routerLink="/portfolio">
+                <img src="../assets/images/projects" class="card-img-top projects-img-border">
+            </a>
+        </div>
 </div>
