added the paintball store web api component
added necessary images and code for the store api project in my portfolio

--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -31,8 +31,8 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Paintball Store Web API</h5>
             </div>
-            <a class="projects-link" routerLink="/calculator">
-                <img src="../assets/images/projects" width="100%" class="projects-img-border">
+            <a class="projects-link" routerLink="/pbstoreproj">
+                <img src="../assets/images/projects/paintballstoreproj/paintballstore.png" width="100%" class="projects-img-border">
             </a>
         </div>
         <div class="card project-border">
