finished the portfolio page
still need to finish the last 3 projects with their respective components. once that is done all the content is finished just needs to be responsive and have animations done with timings.

--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -39,16 +39,16 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Tic Tac Toe AI Tournament</h5>
             </div>
-            <a class="projects-link" routerLink="/my2cents">
-                <img src="../assets/images/projects/" width="100%" class="projects-img-border">
+            <a class="projects-link" routerLink="/tictactoeproj">
+                <img src="../assets/images/projects/tictactoeproj/tictactoeai.png" width="100%" class="projects-img-border">
             </a>
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
-                <h5 class="card-title">Linked List Queue</h5>
+                <h5 class="card-title">Linked List Queue in C</h5>
             </div>
-            <a class="projects-link" routerLink="/portfolio">
-                <img src="../assets/images/projects" class="card-img-top projects-img-border">
+            <a class="projects-link" routerLink="/linkedlistqueueproj">
+                <img src="../assets/images/projects/linkedlistqueueproj/linkedlistqueue.png" class="card-img-top projects-img-border">
             </a>
         </div>
     </div>
@@ -57,24 +57,25 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Recursive GCD Calculator</h5>
             </div>
-            <a class="projects-link" routerLink="/calculator">
-                <img src="../assets/images/projects" width="100%" class="projects-img-border">
+            <a class="projects-link" routerLink="/">
+                <img src="../assets/images/projects/recursivegcdproj/recursivegcd.png" width="100%" class="projects-img-border">
             </a>
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
                 <h5 class="card-title">Mini Web Pack</h5>
             </div>
-            <a class="projects-link" routerLink="/my2cents">
-                <img src="../assets/images/projects/" width="100%" class="projects-img-border">
+            <a class="projects-link" routerLink="/">
+                <img src="../assets/images/projects/miniwebpackproj/miniwebpack.png" width="100%" class="projects-img-border">
             </a>
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
                 <h5 class="card-title">Arduino Light Switch</h5>
             </div>
-            <a class="projects-link" routerLink="/portfolio">
-                <img src="../assets/images/projects" class="card-img-top projects-img-border">
+            <a class="projects-link" routerLink="/">
+                <img src="../assets/images/projects/arduinolightproj/arduino.png" class="card-img-top projects-img-border">
             </a>
         </div>
+    </div>
 </div>
