finished all the content for the portfolio page
added the last 3 components for the portfolio page, fixed some wrong text (like titles that were wrong) and added correct github links and router links to take you to the right places when clicking the buttons

--- a/DeMarksWebsite/src/app/paintball-store-proj/paintball-store-proj.component.html
+++ b/DeMarksWebsite/src/app/paintball-store-proj/paintball-store-proj.component.html
@@ -8,7 +8,7 @@
             <a class="button-text" href="https://github.com/andrewd1137/Paintball-Store-Terminal-Application" target="_blank" rel="noopener noreferrer">Terminal App Version on Github</a>
         </div>
         <h1 class="education-container main-headings">
-            My 2 Cents Banking/Investment
+            Paintball Store Web API/Terminal Application
         </h1>
     </div>
     <div class="education-container">
