--- a/DeMarksWebsite/src/app/portfolio/portfolio.component.html
+++ b/DeMarksWebsite/src/app/portfolio/portfolio.component.html
@@ -57,7 +57,7 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Recursive GCD Calculator</h5>
             </div>
-            <a class="projects-link" routerLink="/">
+            <a class="projects-link" routerLink="/gcdcalc">
                 <img src="../assets/images/projects/recursivegcdproj/recursivegcd.png" width="100%" class="projects-img-border">
             </a>
         </div>
@@ -65,7 +65,7 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Mini Web Pack</h5>
             </div>
-            <a class="projects-link" routerLink="/">
+            <a class="projects-link" routerLink="/miniwebpack">
                 <img src="../assets/images/projects/miniwebpackproj/miniwebpack.png" width="100%" class="projects-img-border">
             </a>
         </div>
@@ -73,9 +73,12 @@
             <div class="card-body projects-heading">
                 <h5 class="card-title">Arduino Light Switch</h5>
             </div>
-            <a class="projects-link" routerLink="/">
+            <a class="projects-link" routerLink="/arduinolightswitch">
                 <img src="../assets/images/projects/arduinolightproj/arduino.png" class="card-img-top projects-img-border">
             </a>
         </div>
+    </div>
+    <div style="margin-top: 2rem;">
+        <app-footer></app-footer>
     </div>
 </div>
