--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,22 +1,19 @@
-.flex-container
+.main-container
 {
     background-color: #000;
-    display: flex;
-    justify-content: space-around;
 }
 
-.flexbox-item
+.flexbox-container
 {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex: 1 1 auto;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 2rem;
+    margin-left: 2rem;
 }
 
-.demarks-logo
-{
-    margin-top: 0.5rem;
-   
-}
 
 .demarks-nav-bar-link
 {
@@ -55,5 +52,5 @@
 .mat-sidenav-container
 {   
     height: 100%;
-    position: absolute;    
+    position: fixed;    
 }
