fixed bug with the nav bar not working right turns out the content in router-outlet needs to go inside the mat-sidenav-container in order for buttons and such on page to work properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="main-root">
     <app-nav-bar></app-nav-bar>
-    <router-outlet></router-outlet>
+    <!-- router outlet has to go inside the app-nav-bar
+    for content on page to be corretly displayed and working due to the
+    mat-sidenav-container. This is for nav bar to be responsive and work correctly -->
 </div>
