--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="card projects-margin">
-            <a class="projects-link" routerLink="/">
+            <a class="projects-link" routerLink="/marsproj">
                 <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
           <div class="card-body">
