--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -14,7 +14,6 @@
     margin-left: 2rem;
 }
 
-
 .demarks-nav-bar-link
 {
     font-size: 2rem;
@@ -50,7 +49,6 @@
 }
 
 .mat-sidenav-container
-{   
-    height: 100%;
-    position: fixed;    
-}
+{
+    /* position: absolute; */
+} 
